--- a/DialogTesting/DialogTesting.csproj
+++ b/DialogTesting/DialogTesting.csproj
@@ -50,7 +50,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Utilities\Graphs.cs" />
+    <Compile Include="KnowledgeClassifierTests.cs" />
     <Compile Include="DialogLayerTests.cs" />
+    <Compile Include="Utilities\KnowledgeClassifierUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
