--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -44,11 +44,11 @@
     <Compile Include="Database\FreebaseConnector.cs" />
     <Compile Include="Database\PresidentLayer.cs" />
     <Compile Include="Dialog\Responses\CountResponse.cs" />
-    <Compile Include="Dialog\Responses\ResponseBase.cs" />
+    <Compile Include="Dialog\ResponseBase.cs" />
     <Compile Include="Dialog\Responses\SimpleResponse.cs" />
-    <Compile Include="Knowledge\ExplicitLayer.cs" />
-    <Compile Include="Knowledge\KnowledgeClassifier.cs" />
-    <Compile Include="Knowledge\MultiTraceLog.cs" />
+    <Compile Include="PatternComputation\Knowledge\ExplicitLayer.cs" />
+    <Compile Include="PatternComputation\Knowledge\KnowledgeClassifier.cs" />
+    <Compile Include="PatternComputation\Knowledge\MultiTraceLog.cs" />
     <Compile Include="PatternComputation\Actions\ActionBase.cs" />
     <Compile Include="PatternComputation\Actions\CountAction.cs" />
     <Compile Include="PatternComputation\Actions\InformAction.cs" />
@@ -63,11 +63,11 @@
     <Compile Include="Dialog\Utterances\AskUtterance.cs" />
     <Compile Include="Dialog\Utterances\NoUtterance.cs" />
     <Compile Include="Dialog\Utterances\UtteranceBase.cs" />
-    <Compile Include="Knowledge\ComposedGraph.cs" />
-    <Compile Include="Knowledge\GraphLayerBase.cs" />
-    <Compile Include="Knowledge\KnowledgePath.cs" />
-    <Compile Include="Knowledge\NodeReference.cs" />
-    <Compile Include="Knowledge\PathSegment.cs" />
+    <Compile Include="PatternComputation\Knowledge\ComposedGraph.cs" />
+    <Compile Include="PatternComputation\Knowledge\GraphLayerBase.cs" />
+    <Compile Include="PatternComputation\Knowledge\KnowledgePath.cs" />
+    <Compile Include="PatternComputation\Knowledge\NodeReference.cs" />
+    <Compile Include="PatternComputation\Knowledge\PathSegment.cs" />
     <Compile Include="PatternComputation\DialogTurn.cs" />
     <Compile Include="PatternComputation\EvaluationContext.cs" />
     <Compile Include="PatternComputation\IEvaluation.cs" />
@@ -81,11 +81,23 @@
     <Compile Include="PatternComputation\GroupEvaluation.cs" />
     <Compile Include="PatternComputation\WeightedPattern.cs" />
     <Compile Include="PoolComputation\ActionGroup.cs" />
+    <Compile Include="PoolComputation\ConsoleDecorator.cs" />
+    <Compile Include="PoolComputation\ModifiableResponses\FrameResponse.cs" />
+    <Compile Include="PoolComputation\UtteranceMapping.cs" />
+    <Compile Include="PoolComputation\ConversationFrameBase.cs" />
+    <Compile Include="PoolComputation\DialogContext.cs" />
+    <Compile Include="PoolComputation\Frames\ChangeResponseFrame.cs" />
+    <Compile Include="PoolComputation\Frames\AskAction.cs" />
+    <Compile Include="PoolComputation\Frames\QueryAdviceFrame.cs" />
+    <Compile Include="PoolComputation\Frames\QuestionAnsweringFrame.cs" />
     <Compile Include="PoolComputation\GroupContext.cs" />
+    <Compile Include="PoolComputation\ModifiableResponse.cs" />
+    <Compile Include="PoolComputation\ModifiableResponses\NoContextResponse.cs" />
+    <Compile Include="PoolComputation\ModifiableResponses\SurroundedResponse.cs" />
     <Compile Include="PoolComputation\PoolActions\ConstraintAction.cs" />
     <Compile Include="PoolComputation\PoolHypothesis.cs" />
     <Compile Include="PoolComputation\SemanticPart.cs" />
-    <Compile Include="PoolComputation\ActionMapping.cs" />
+    <Compile Include="PoolComputation\PoolActionMapping.cs" />
     <Compile Include="PoolComputation\ContextPool.cs" />
     <Compile Include="PoolComputation\DialogManager.cs" />
     <Compile Include="PoolComputation\IPoolAction.cs" />
