--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -43,9 +43,14 @@
   <ItemGroup>
     <Compile Include="Database\FreebaseConnector.cs" />
     <Compile Include="Database\PresidentLayer.cs" />
+    <Compile Include="Dialog\DoubleMetaphone.cs" />
+    <Compile Include="Database\TripletLoader\Loader.cs" />
+    <Compile Include="Dialog\ParsedSentence.cs" />
     <Compile Include="Dialog\Responses\CountResponse.cs" />
     <Compile Include="Dialog\ResponseBase.cs" />
     <Compile Include="Dialog\Responses\SimpleResponse.cs" />
+    <Compile Include="Dialog\StringSearch.cs" />
+    <Compile Include="Dialog\SentenceParser.cs" />
     <Compile Include="PatternComputation\Knowledge\ExplicitLayer.cs" />
     <Compile Include="PatternComputation\Knowledge\KnowledgeClassifier.cs" />
     <Compile Include="PatternComputation\Knowledge\MultiTraceLog.cs" />
