--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -47,17 +47,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseManager.cs" />
     <Compile Include="RootController.cs" />
+    <Compile Include="DialogLog.cs" />
     <Compile Include="WebConsole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="www\404.haml" />
+    <None Include="www\experiment.haml" />
     <None Include="www\css\style.scss" />
     <None Include="www\dialog.haml" />
     <None Include="www\index.haml" />
     <None Include="www\layout.haml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="www\data\storages\" />
     <Folder Include="www\images\" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +80,8 @@
       <DependentUpon>style.scss</DependentUpon>
     </Content>
     <Content Include="www\css\web-default.css" />
+    <Content Include="www\data\tasks\task2.htm" />
+    <Content Include="www\data\tasks\task1.htm" />
     <Content Include="www\js\chat.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
