--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -42,17 +42,27 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DialogWeb.cs" />
+    <Compile Include="ExperimentData.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseManager.cs" />
     <Compile Include="RootController.cs" />
-    <Compile Include="DialogLog.cs" />
+    <Compile Include="TaskFactory.cs" />
+    <Compile Include="TaskInstance.cs" />
+    <Compile Include="TaskPatterns\HusbandOfPresidentWifeTask.cs" />
+    <Compile Include="TaskPatterns\PresidentChildrenTask.cs" />
+    <Compile Include="TaskPatterns\PresidentOfStateTask.cs" />
+    <Compile Include="TaskPatterns\StateOfPresidentTask.cs" />
+    <Compile Include="TaskPatterns\TaskPatternBase.cs" />
+    <Compile Include="TaskPatterns\WifeOfPresidentTask.cs" />
+    <Compile Include="UserTracker.cs" />
     <Compile Include="WebConsole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="www\404.haml" />
+    <None Include="www\no_tasks.haml" />
     <None Include="www\experiment.haml" />
     <None Include="www\css\style.scss" />
     <None Include="www\dialog.haml" />
@@ -60,7 +70,7 @@
     <None Include="www\layout.haml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="www\data\storages\" />
+    <Folder Include="www\data\storages\users\" />
     <Folder Include="www\images\" />
   </ItemGroup>
   <ItemGroup>
