Removing legacy code

--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -57,15 +57,9 @@
     <Compile Include="Dialog\Responses\SimpleResponse.cs" />
     <Compile Include="Dialog\StringSearch.cs" />
     <Compile Include="Dialog\SentenceParser.cs" />
-    <Compile Include="PatternComputation\Knowledge\ExplicitLayer.cs" />
-    <Compile Include="PatternComputation\Knowledge\KnowledgeClassifier.cs" />
-    <Compile Include="PatternComputation\Knowledge\MultiTraceLog.cs" />
-    <Compile Include="PatternComputation\Actions\ActionBase.cs" />
-    <Compile Include="PatternComputation\Actions\CountAction.cs" />
-    <Compile Include="PatternComputation\Actions\InformAction.cs" />
-    <Compile Include="PatternComputation\ConsoleDecorator.cs" />
-    <Compile Include="PatternComputation\DialogContext.cs" />
-    <Compile Include="PatternComputation\DialogManager.cs" />
+    <Compile Include="Knowledge\ExplicitLayer.cs" />
+    <Compile Include="Knowledge\KnowledgeClassifier.cs" />
+    <Compile Include="Knowledge\MultiTraceLog.cs" />
     <Compile Include="Dialog\ConsoleServices.cs" />
     <Compile Include="Dialog\DialogConsole.cs" />
     <Compile Include="Dialog\IDialogManager.cs" />
@@ -74,23 +68,11 @@
     <Compile Include="Dialog\Utterances\AskUtterance.cs" />
     <Compile Include="Dialog\Utterances\NoUtterance.cs" />
     <Compile Include="Dialog\Utterances\UtteranceBase.cs" />
-    <Compile Include="PatternComputation\Knowledge\ComposedGraph.cs" />
-    <Compile Include="PatternComputation\Knowledge\GraphLayerBase.cs" />
-    <Compile Include="PatternComputation\Knowledge\KnowledgePath.cs" />
-    <Compile Include="PatternComputation\Knowledge\NodeReference.cs" />
-    <Compile Include="PatternComputation\Knowledge\PathSegment.cs" />
-    <Compile Include="PatternComputation\DialogTurn.cs" />
-    <Compile Include="PatternComputation\EvaluationContext.cs" />
-    <Compile Include="PatternComputation\IEvaluation.cs" />
-    <Compile Include="PatternComputation\KnowledgeGroup.cs" />
-    <Compile Include="PatternComputation\NodeAlternatives.cs" />
-    <Compile Include="PatternComputation\NodeRestriction.cs" />
-    <Compile Include="PatternComputation\PartialMatching\PartialEvaluation.cs" />
-    <Compile Include="PatternComputation\PartialMatching\SubgraphSnapshot.cs" />
-    <Compile Include="PatternComputation\PathFeature.cs" />
-    <Compile Include="PatternComputation\MultiTurnDialogLayer.cs" />
-    <Compile Include="PatternComputation\GroupEvaluation.cs" />
-    <Compile Include="PatternComputation\WeightedPattern.cs" />
+    <Compile Include="Knowledge\ComposedGraph.cs" />
+    <Compile Include="Knowledge\GraphLayerBase.cs" />
+    <Compile Include="Knowledge\KnowledgePath.cs" />
+    <Compile Include="Knowledge\NodeReference.cs" />
+    <Compile Include="Knowledge\PathSegment.cs" />
     <Compile Include="PoolComputation\ActionBlock.cs" />
     <Compile Include="PoolComputation\ActionGroup.cs" />
     <Compile Include="PoolComputation\ConsoleDecorator.cs" />
