--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -22,7 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
+    <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -51,6 +51,7 @@
     <Compile Include="Database\CallStorage.cs" />
     <Compile Include="Database\FlatPresidentLayer.cs" />
     <Compile Include="Database\PresidentLayer.cs" />
+    <Compile Include="Database\WikidataHelper.cs" />
     <Compile Include="Dialog\DoubleMetaphone.cs" />
     <Compile Include="Database\TripletLoader\Loader.cs" />
     <Compile Include="Dialog\ParsedSentence.cs" />
@@ -76,11 +77,15 @@
     <Compile Include="Knowledge\NodeReference.cs" />
     <Compile Include="Knowledge\PathSegment.cs" />
     <Compile Include="PoolComputation\ActionBlock.cs" />
+    <Compile Include="PoolComputation\AnswerReport.cs" />
     <Compile Include="PoolComputation\IMappingProvider.cs" />
     <Compile Include="PoolComputation\MappingControl.cs" />
+    <Compile Include="PoolComputation\NodesEnumeration.cs" />
+    <Compile Include="PoolComputation\NodesSubstitution.cs" />
     <Compile Include="PoolComputation\PoolActions\ExtendAction.cs" />
     <Compile Include="PoolComputation\PoolActions\InsertAction.cs" />
     <Compile Include="PoolComputation\QuestionAnsweringModule.cs" />
+    <Compile Include="PoolComputation\QuestionEntry.cs" />
     <Compile Include="PoolComputation\StateDialogManager.cs" />
     <Compile Include="PoolComputation\StateDialog\EdgeIdentifier.cs" />
     <Compile Include="PoolComputation\StateDialog\EdgeInput.cs" />
