--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -35,6 +35,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,7 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionEntry.cs" />
     <Compile Include="ExperimentCodeWriter.cs" />
+    <Compile Include="FormatHelper.cs" />
+    <Compile Include="LogFile.cs" />
     <Compile Include="PresidentInfo.cs" />
     <Compile Include="TaskPatternUtilities.cs" />
     <Compile Include="DialogWeb.cs" />
@@ -66,7 +73,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
     <None Include="www\404.haml" />
+    <None Include="www\action_log.haml" />
+    <None Include="www\logs.haml" />
     <None Include="www\no_tasks.haml" />
     <None Include="www\experiment.haml" />
     <None Include="www\css\style.scss" />
