Explicit state dialog SLU parsing

--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -52,14 +52,28 @@
     <Compile Include="Database\FlatPresidentLayer.cs" />
     <Compile Include="Database\PresidentLayer.cs" />
     <Compile Include="Database\WikidataHelper.cs" />
+    <Compile Include="Dialog\Acts\ChitChatAct.cs" />
+    <Compile Include="Dialog\Acts\UnrecognizedAct.cs" />
+    <Compile Include="Dialog\Acts\IActVisitor.cs" />
+    <Compile Include="Dialog\Acts\QuestionAct.cs" />
+    <Compile Include="Dialog\Acts\ThinkAct.cs" />
     <Compile Include="Dialog\DoubleMetaphone.cs" />
     <Compile Include="Database\TripletLoader\Loader.cs" />
-    <Compile Include="Dialog\ParsedSentence.cs" />
+    <Compile Include="Dialog\IInputDialogManager.cs" />
+    <Compile Include="Dialog\ParsedExpression.cs" />
+    <Compile Include="Dialog\Parsing\PatternConfiguration.cs" />
+    <Compile Include="Dialog\Parsing\PatternState.cs" />
+    <Compile Include="Dialog\Parsing\UtterancePattern.cs" />
     <Compile Include="Dialog\Responses\CountResponse.cs" />
     <Compile Include="Dialog\ResponseBase.cs" />
     <Compile Include="Dialog\Responses\SimpleResponse.cs" />
+    <Compile Include="Dialog\Acts\AdviceAct.cs" />
+    <Compile Include="Dialog\Acts\AffirmAct.cs" />
+    <Compile Include="Dialog\Acts\DialogActBase.cs" />
+    <Compile Include="Dialog\Acts\ExplicitAdviceAct.cs" />
+    <Compile Include="Dialog\Acts\NegateAct.cs" />
     <Compile Include="Dialog\StringSearch.cs" />
-    <Compile Include="Dialog\SentenceParser.cs" />
+    <Compile Include="Dialog\UtteranceParser.cs" />
     <Compile Include="Knowledge\ExplicitLayer.cs" />
     <Compile Include="Knowledge\KnowledgeClassifier.cs" />
     <Compile Include="Knowledge\MultiTraceLog.cs" />
@@ -86,11 +100,22 @@
     <Compile Include="PoolComputation\PoolActions\InsertAction.cs" />
     <Compile Include="PoolComputation\QuestionAnsweringModule.cs" />
     <Compile Include="PoolComputation\QuestionEntry.cs" />
+    <Compile Include="Dialog\SLUFactory.cs" />
     <Compile Include="PoolComputation\StateDialogManager.cs" />
+    <Compile Include="PoolComputation\StateDialog\DialogState.cs" />
     <Compile Include="PoolComputation\StateDialog\EdgeIdentifier.cs" />
     <Compile Include="PoolComputation\StateDialog\EdgeInput.cs" />
+    <Compile Include="PoolComputation\StateDialog\InputProcessor.cs" />
+    <Compile Include="PoolComputation\StateDialog\MachineActions\AcceptAdviceAction.cs" />
+    <Compile Include="PoolComputation\StateDialog\MachineActions\NoAdviceApologizeAction.cs" />
+    <Compile Include="PoolComputation\StateDialog\MachineActions\HowCanIHelpYouAction.cs" />
+    <Compile Include="PoolComputation\StateDialog\MachineActions\QuestionAnsweringAction.cs" />
+    <Compile Include="PoolComputation\StateDialog\MachineActions\RequestAdviceAction.cs" />
+    <Compile Include="PoolComputation\StateDialog\MachineActions\MachineActionBase.cs" />
+    <Compile Include="PoolComputation\StateDialog\MachineActions\WelcomeAction.cs" />
     <Compile Include="PoolComputation\StateDialog\StateBase.cs" />
     <Compile Include="PoolComputation\StateDialog\StateContext.cs" />
+    <Compile Include="PoolComputation\StateDialog\StateContext2.cs" />
     <Compile Include="PoolComputation\StateDialog\StateGraphBuilder.cs" />
     <Compile Include="PoolComputation\StateDialog\StateProperty.cs" />
     <Compile Include="PoolComputation\StateDialog\States\AcceptAdvice.cs" />
@@ -118,6 +143,7 @@
     <Compile Include="PoolComputation\PoolActions\PushAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PoolComputation\ExplicitStateDialogManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
