--- a/WebBackend/WebBackend.csproj
+++ b/WebBackend/WebBackend.csproj
@@ -48,28 +48,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionEntry.cs" />
-    <Compile Include="ExperimentCodeWriter.cs" />
+    <Compile Include="Experiment\NoTaskExperiment.cs" />
+    <Compile Include="Experiment\SolutionLog.cs" />
+    <Compile Include="Experiment\ActionEntry.cs" />
+    <Compile Include="Experiment\CrowdFlowerExperiment.cs" />
+    <Compile Include="Experiment\CrowdFlowerCodeWriter.cs" />
+    <Compile Include="Experiment\ExperimentCollection.cs" />
+    <Compile Include="Experiment\ExperimentBase.cs" />
     <Compile Include="FormatHelper.cs" />
-    <Compile Include="LogFile.cs" />
-    <Compile Include="PresidentInfo.cs" />
-    <Compile Include="TaskPatternUtilities.cs" />
+    <Compile Include="Experiment\LogFile.cs" />
+    <Compile Include="Task\President\PresidentInfo.cs" />
+    <Compile Include="Task\TaskPatternUtilities.cs" />
     <Compile Include="DialogWeb.cs" />
-    <Compile Include="ExperimentData.cs" />
-    <Compile Include="InputManager.cs" />
+    <Compile Include="DialogProvider\InputManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseManager.cs" />
     <Compile Include="RootController.cs" />
-    <Compile Include="TaskFactory.cs" />
-    <Compile Include="TaskInstance.cs" />
-    <Compile Include="TaskPatterns\PresidentChildrenTask.cs" />
-    <Compile Include="TaskPatterns\PresidentOfStateTask.cs" />
-    <Compile Include="TaskPatterns\StateOfPresidentTask.cs" />
-    <Compile Include="TaskPatterns\TaskPatternBase.cs" />
-    <Compile Include="TaskPatterns\WifeOfPresidentTask.cs" />
-    <Compile Include="UserTracker.cs" />
-    <Compile Include="WebConsole.cs" />
+    <Compile Include="Task\President\PresidentTaskFactory.cs" />
+    <Compile Include="Task\TaskInstance.cs" />
+    <Compile Include="Task\President\PresidentChildrenTask.cs" />
+    <Compile Include="Task\President\PresidentOfStateTask.cs" />
+    <Compile Include="Task\President\StateOfPresidentTask.cs" />
+    <Compile Include="Task\President\TaskPatternBase.cs" />
+    <Compile Include="Task\President\WifeOfPresidentTask.cs" />
+    <Compile Include="Task\TaskFactoryBase.cs" />
+    <Compile Include="DialogProvider\UserData.cs" />
+    <Compile Include="DialogProvider\WebConsole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
