--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Dialog\DoubleMetaphone.cs" />
     <Compile Include="Database\TripletLoader\Loader.cs" />
     <Compile Include="Dialog\IInputDialogManager.cs" />
-    <Compile Include="Dialog\ParsedExpression.cs" />
+    <Compile Include="Dialog\ParsedUtterance.cs" />
     <Compile Include="Dialog\Parsing\PatternConfiguration.cs" />
     <Compile Include="Dialog\Parsing\PatternState.cs" />
     <Compile Include="Dialog\Parsing\UtterancePattern.cs" />
@@ -95,6 +95,20 @@
     <Compile Include="PoolComputation\ActionBlock.cs" />
     <Compile Include="PoolComputation\AnswerReport.cs" />
     <Compile Include="PoolComputation\IMappingProvider.cs" />
+    <Compile Include="PoolComputation\MappedQA\ContextRule.cs" />
+    <Compile Include="PoolComputation\MappedQA\FeatureMapping.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\FeatureBase.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\FeatureCover.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\FeatureGeneratorBase.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\FeatureIndex.cs" />
+    <Compile Include="PoolComputation\MappedQA\MappedQAModule.cs" />
+    <Compile Include="PoolComputation\MappedQA\MappingContext.cs" />
+    <Compile Include="PoolComputation\MappedQA\MappingOptimizer.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\Interpretation.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\InterpretationsFactory.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\OptimizedEntry.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\PoolRuleBase.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\ScoredRuleMapping.cs" />
     <Compile Include="PoolComputation\MappingControl.cs" />
     <Compile Include="PoolComputation\NodesEnumeration.cs" />
     <Compile Include="PoolComputation\NodesSubstitution.cs" />
@@ -102,7 +116,7 @@
     <Compile Include="PoolComputation\PoolActions\InsertAction.cs" />
     <Compile Include="PoolComputation\ProcessingContext.cs" />
     <Compile Include="PoolComputation\QuestionAnsweringModuleBase.cs" />
-    <Compile Include="PoolComputation\QuestionAnsweringModule.cs" />
+    <Compile Include="PoolComputation\HeuristicQAModule.cs" />
     <Compile Include="PoolComputation\QuestionEntry.cs" />
     <Compile Include="Dialog\SLUFactory.cs" />
     <Compile Include="PoolComputation\StateDialogManager.cs" />
