Implementing Feature based approach for QA and Optimization routines

--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -101,14 +101,21 @@
     <Compile Include="PoolComputation\MappedQA\Features\FeatureCover.cs" />
     <Compile Include="PoolComputation\MappedQA\Features\FeatureGeneratorBase.cs" />
     <Compile Include="PoolComputation\MappedQA\Features\FeatureIndex.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\SimpleFeature.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\SimpleFeatureGenerator.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\UnigramFeature.cs" />
+    <Compile Include="PoolComputation\MappedQA\Features\UnigramFeatureGenerator.cs" />
     <Compile Include="PoolComputation\MappedQA\MappedQAModule.cs" />
     <Compile Include="PoolComputation\MappedQA\MappingContext.cs" />
     <Compile Include="PoolComputation\MappedQA\MappingOptimizer.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\CompositionPoolRule.cs" />
     <Compile Include="PoolComputation\MappedQA\PoolRules\Interpretation.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\InterpretationDecomposition.cs" />
     <Compile Include="PoolComputation\MappedQA\PoolRules\InterpretationsFactory.cs" />
     <Compile Include="PoolComputation\MappedQA\PoolRules\OptimizedEntry.cs" />
     <Compile Include="PoolComputation\MappedQA\PoolRules\PoolRuleBase.cs" />
-    <Compile Include="PoolComputation\MappedQA\PoolRules\ScoredRuleMapping.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\ContextRuleMapping.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\TransformPoolRule.cs" />
     <Compile Include="PoolComputation\MappingControl.cs" />
     <Compile Include="PoolComputation\NodesEnumeration.cs" />
     <Compile Include="PoolComputation\NodesSubstitution.cs" />
@@ -119,6 +126,7 @@
     <Compile Include="PoolComputation\HeuristicQAModule.cs" />
     <Compile Include="PoolComputation\QuestionEntry.cs" />
     <Compile Include="Dialog\SLUFactory.cs" />
+    <Compile Include="PoolComputation\Ranked.cs" />
     <Compile Include="PoolComputation\StateDialogManager.cs" />
     <Compile Include="PoolComputation\StateDialog\DialogState.cs" />
     <Compile Include="PoolComputation\StateDialog\EdgeIdentifier.cs" />
