Topic selection implemented

--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -121,6 +121,7 @@
     <Compile Include="PoolComputation\MappedQA\PoolRules\RuleBitBase.cs" />
     <Compile Include="PoolComputation\MappedQA\PoolRules\RuleHead.cs" />
     <Compile Include="PoolComputation\MappedQA\PoolRules\RulePart.cs" />
+    <Compile Include="PoolComputation\MappedQA\PoolRules\InsertPoolRule.cs" />
     <Compile Include="PoolComputation\MappedQA\PoolRules\TransformPoolRule.cs" />
     <Compile Include="PoolComputation\MappingControl.cs" />
     <Compile Include="PoolComputation\NodesEnumeration.cs" />
