--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Database\FlatPresidentLayer.cs" />
     <Compile Include="Database\PresidentLayer.cs" />
     <Compile Include="Database\WikidataHelper.cs" />
+    <Compile Include="DataCollection\CollectionManager.cs" />
     <Compile Include="Dialog\Acts\ChitChatAct.cs" />
     <Compile Include="Dialog\Acts\DontKnowAct.cs" />
     <Compile Include="Dialog\Acts\UnrecognizedAct.cs" />
