Improvements + Changes after DataCollection5

--- a/KnowledgeDialog/KnowledgeDialog.csproj
+++ b/KnowledgeDialog/KnowledgeDialog.csproj
@@ -60,8 +60,10 @@
     <Compile Include="DataCollection\MachineActs\DontUnderstandAct.cs" />
     <Compile Include="DataCollection\MachineActs\IncompleteByeAct.cs" />
     <Compile Include="DataCollection\MachineActs\MachineActionBase.cs" />
+    <Compile Include="DataCollection\MachineActs\UnwantedRephraseDetected.cs" />
     <Compile Include="DataCollection\MachineActs\RequestExplanationAct.cs" />
     <Compile Include="DataCollection\MachineActs\RequestQuestionAsnwerAct.cs" />
+    <Compile Include="DataCollection\MachineActs\TooBriefAct.cs" />
     <Compile Include="DataCollection\MachineActs\WelcomeAct.cs" />
     <Compile Include="Dialog\Acts\ChitChatAct.cs" />
     <Compile Include="Dialog\Acts\DontKnowAct.cs" />
